deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: 287043460198.dkr.ecr.ap-southeast-1.amazonaws.com/app1:latest
        ports:
        - containerPort: 3000
