service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app1-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-app1
  ports:
    - port: 80
      targetPort: 3000
